unpackaged/main/default/objects/Contact_Team__c/Contact_Team__c.object-meta.xml
<CustomObject>
    <label>Contact Team Member</label>
    <nameField>
        <displayFormat>CT-{00000000}</displayFormat>
        <label>Contact Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>