unpackaged/main/default/objects/Contact_Team__c/fields/Team_Member_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_Business_Unit__c</fullName>
    <formula>TEXT( Team_Member__r.Business_Unit__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Team Member Business Unit</label>
    <type>Text</type>
</CustomField>