unpackaged/main/default/objects/Contact_Team__c/fields/Team_Member_Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_Job_Title__c</fullName>
    <formula>Team_Member__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Team Member Job Title</label>
    <type>Text</type>
</CustomField>